<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.group8project.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_friends"
        android:name="edu.uw.tcss450.group8project.ui.friends.FriendListFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friend_list" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.group8project.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_chatlist"
        android:name="edu.uw.tcss450.group8project.ui.chat.ChatListFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_chat_list">
        <action
            android:id="@+id/action_chatListFragment_to_chatFragment"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_navigation_chatlist_to_chatCreateFragment"
            app:destination="@id/chatCreateFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.group8project.ui.chat.ChatFragment"
        android:label="{chatname}"
        tools:layout="@layout/fragment_chat" >
        <argument android:name="chatid"
            app:argType="integer" />
        <argument
            android:name="chatname"
            app:argType="string"
            app:nullable="false"/>
        <action
            android:id="@+id/action_navigation_chat_to_navigation_chatlist"
            app:destination="@id/navigation_chatlist" />
    </fragment>
    <fragment
        android:id="@+id/chatCreateFragment"
        android:name="edu.uw.tcss450.group8project.ui.chat.ChatCreateFragment"
        android:label="@string/title_chat_create"
        tools:layout="@layout/fragment_chat_create">
        <action
            android:id="@+id/action_chatCreateFragment_to_navigation_chatlist"
            app:destination="@id/navigation_chatlist" />
    </fragment>
</navigation>